debug password input

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".UserActivity"></activity>
+        <activity android:name=".RegistrActivity"></activity>
     </application>
 
 </manifest>
